--- a/packages/extension-content-ui/src/components/sensus-score/sensus-score.scss
+++ b/packages/extension-content-ui/src/components/sensus-score/sensus-score.scss
@@ -6,16 +6,23 @@
   text-align: center;
   font-style: normal;
   color: #fff;
-  font-size: 16px;
+  font-size: 12px;
   border-radius: 50%;
   border-width: 2px;
   border-style: solid;
   box-sizing: border-box;
+  cursor: default;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.score:hover {
+  opacity: 0.2;
 }
 
 .score-1, .score-2 {
-  background-color: #dd2222;
-  border-color: #c71f1f;
+  background-color: #f32013;
+  border-color: #e1180b;
 }
 
 .score-3 {
@@ -24,6 +31,6 @@
 }
 
 .score-4, .score-5 {
-  background-color: #00e3a0;
-  border-color: #00c98e;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
 }
